--- a/camera_settings.json
+++ b/camera_settings.json
@@ -1,8 +1,8 @@
 {
   "camera_name": "Kitchen",
-  "width": 1280,
-  "height": 720,
-  "framerate": 15,
+  "width": 640,
+  "height": 480,
+  "framerate": 10,
   "brightness": 0,
   "contrast": 1,
   "saturation": 1,
@@ -16,8 +16,8 @@
   "ev": 0,
   "shutter": 0,
   "gain": 0,
-  "denoise": "auto",
+  "denoise": "off",
   "hdr": "off",
-  "quality": 93,
+  "quality": 40,
   "snapshot_quality": 100
 }
