--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,3 +12,13 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+
+# Local hook: sanitize personal host/user/IP strings in staged files before commit
+  - repo: local
+    hooks:
+      - id: sanitize-personal-info
+        name: Sanitize personal host/user/IP
+        entry: ./scripts/sanitize_personal_info.py
+        language: script
+        files: '\\.(py|sh|md|yaml|yml|json|conf|service|txt|html)$'
+        stages: [commit]
