Add VLC low-latency streaming support
Features:
- Direct H.264 stream endpoint at /stream.h264 for VLC
- ~200-500ms latency (vs 3-5s for HLS)
- Toggle button in UI to start/stop VLC stream
- Modal dialog with stream URL and instructions
- Copy URL button and VLC protocol handler
- VLC stream runs independently of HLS stream
- Active state indication on VLC button
- Both streams can run simultaneously

Usage:
1. Click VLC button in bottom control bar
2. Copy stream URL or click 'Open in VLC'
3. In VLC: Media → Open Network Stream → paste URL
4. Enjoy real-time low-latency stream

--- a/camera-control.service
+++ b/camera-control.service
@@ -5,9 +5,9 @@ Wants=network.target
 
 [Service]
 Type=simple
-User=pi
-WorkingDirectory=/home/pi/camera_control
-ExecStart=/usr/bin/python3 /home/pi/camera_control/camera_control.py
+User=aachten
+WorkingDirectory=/home/aachten/camera_control
+ExecStart=/usr/bin/python3 /home/aachten/camera_control/camera_control.py
 Restart=always
 RestartSec=5
 StandardOutput=journal
