feat: Limit VLC streaming to 2 concurrent clients for Pi Zero
- Add MAX_VLC_CLIENTS constant (set to 2)
- Check client limit before accepting new streams
- Return 503 with helpful message when limit reached
- Prevents Pi Zero resource exhaustion from multiple streams

--- a/picamctl_settings.json
+++ b/picamctl_settings.json
@@ -19,5 +19,11 @@
   "denoise": "off",
   "hdr": "off",
   "quality": 40,
-  "snapshot_quality": 100
+  "snapshot_quality": 100,
+  "mqtt_enabled": true,
+  "mqtt_broker": "192.168.0.167",
+  "mqtt_port": 1883,
+  "mqtt_user": "",
+  "mqtt_password": "",
+  "mqtt_base_topic": "surveillance"
 }
