--- a/static/manifest.json
+++ b/static/manifest.json
@@ -8,18 +8,22 @@
   "orientation": "portrait-primary",
   "theme_color": "#0a0e27",
   "background_color": "#0a0e27",
+  "prefer_related_applications": false,
   "icons": [
     {
       "src": "/static/favicon.svg",
       "sizes": "any",
       "type": "image/svg+xml",
-      "purpose": "any"
-    }
-  ],
-  "screenshots": [
+      "purpose": "any maskable"
+    },
     {
       "src": "/static/favicon.svg",
       "sizes": "192x192",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/static/favicon.svg",
+      "sizes": "512x512",
       "type": "image/svg+xml"
     }
   ],
@@ -29,11 +33,12 @@
       "name": "Web Interface",
       "short_name": "Web",
       "description": "Open the web interface",
-      "url": "/web",
+      "url": "/web?source=shortcut",
       "icons": [
         {
           "src": "/static/favicon.svg",
-          "sizes": "192x192"
+          "sizes": "any",
+          "type": "image/svg+xml"
         }
       ]
     },
@@ -41,11 +46,12 @@
       "name": "VLC Stream",
       "short_name": "VLC",
       "description": "Open the VLC streaming interface",
-      "url": "/vlc",
+      "url": "/vlc?source=shortcut",
       "icons": [
         {
           "src": "/static/favicon.svg",
-          "sizes": "192x192"
+          "sizes": "any",
+          "type": "image/svg+xml"
         }
       ]
     }
